Feat: Add Inertia/CoM visualization via Eigen decomposition, fix i18n, update docs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>URDF Studio</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>URDF Studio - Professional Robot Design & Visualization Tool</title>
+    <meta name="title" content="URDF Studio - Professional Robot Design & Visualization Tool" />
+    <meta name="description" content="URDF Studio is a powerful web-based tool for creating, visualizing, and editing URDF/MJCF/USD robot files. Design robots with real-time 3D preview, physics inspection, and AI assistance." />
+    <meta name="keywords" content="URDF, Robot Design, Robotics, 3D Visualization, WebGL, Three.js, Robot Simulation, Digital Twin, MJCF, USD, OpenAI, Gemini" />
+    <meta name="author" content="URDF Architect" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/logo.ico" />
+
+    <!-- Open Graph / Facebook / WeChat / QQ -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://urdf-architect.vercel.app/" />
+    <meta property="og:title" content="URDF Studio - Visual Robot Design Tool" />
+    <meta property="og:description" content="Design, visualize, and inspect robots in your browser. Support for URDF, MJCF, and USD formats with AI-powered assistance." />
+    <meta property="og:image" content="/favicon.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://urdf-architect.vercel.app/" />
+    <meta property="twitter:title" content="URDF Studio - Visual Robot Design Tool" />
+    <meta property="twitter:description" content="Design, visualize, and inspect robots in your browser. Support for URDF, MJCF, and USD formats with AI-powered assistance." />
+    <meta property="twitter:image" content="/favicon.svg" />
 </head>
   <body>
     <div id="root"></div>
