--- a/index.html
+++ b/index.html
@@ -11,22 +11,13 @@
     <meta name="keywords" content="URDF, Robot Design, Robotics, 3D Visualization, WebGL, Three.js, Robot Simulation, Digital Twin, MJCF, USD, OpenAI, Gemini" />
     <meta name="author" content="URDF Studio" />
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/logo.png" />
 
-    <!-- Open Graph / Facebook / WeChat / QQ -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://urdf-studio.vercel.app/" />
+    <meta property="og:url" content="https://urdf.d-robotics.cc/" />
     <meta property="og:title" content="URDF Studio - Visual Robot Design Tool" />
     <meta property="og:description" content="Design, visualize, and inspect robots in your browser. Support for URDF, MJCF, and USD formats with AI-powered assistance." />
-    <meta property="og:image" content="/favicon.svg" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://urdf-studio.vercel.app/" />
-    <meta property="twitter:title" content="URDF Studio - Visual Robot Design Tool" />
-    <meta property="twitter:description" content="Design, visualize, and inspect robots in your browser. Support for URDF, MJCF, and USD formats with AI-powered assistance." />
-    <meta property="twitter:image" content="/favicon.svg" />
+    <meta property="og:image" content="/logo.png" />
 </head>
   <body>
     <div id="root"></div>
