--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="keywords" content="URDF, Robot Design, Robotics, 3D Visualization, WebGL, Three.js, Robot Simulation, Digital Twin, MJCF, USD, OpenAI, Gemini" />
     <meta name="author" content="URDF Studio" />
 
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/logos/logo.png" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://urdf.d-robotics.cc/" />
     <meta property="og:title" content="URDF Studio - Visual Robot Design Tool" />
     <meta property="og:description" content="Design, visualize, and inspect robots in your browser. Support for URDF, MJCF, and USD formats with AI-powered assistance." />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/logos/logo.png" />
 </head>
   <body>
     <div id="root"></div>
