fix the desciption

--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>URDF Studio - Professional Robot Design & Visualization Tool</title>
-    <meta name="title" content="URDF Studio - Professional Robot Design & Visualization Tool" />
-    <meta name="description" content="URDF Studio is a powerful web-based tool for creating, visualizing, and editing URDF/MJCF/USD robot files. Design robots with real-time 3D preview, physics inspection, and AI assistance." />
-    <meta name="keywords" content="URDF, Robot Design, Robotics, 3D Visualization, WebGL, Three.js, Robot Simulation, Digital Twin, MJCF, USD, OpenAI, Gemini" />
-    <meta name="author" content="URDF Studio" />
+    <title>URDF Studio - Professional Robot Design & Visualization Platform | 机器人可视化设计平台</title>
+    <meta name="title" content="URDF Studio - Professional Robot Design & Visualization Platform | 机器人可视化设计平台" />
+    <meta name="description" content="URDF Studio is a professional URDF design and visualization workstation. Supports rapid editing, collision optimization, modular assembly, parameter configuration, and AI review. URDF Studio 是专业的机器人 URDF 设计与可视化工作站，支持快速编辑、碰撞优化、模块组装、参数配置与 AI 审阅。" />
+    <meta name="keywords" content="URDF Editor, Robot Assembly, Kinematic Modeling, Collision Geometry Editor, Modular Robotics, End-Effector Integration, ROS Visualization, WebGL Robotics, Online URDF Tool, Robot Simulation, Multi-body Dynamics, Unitree, MJCF Converter, USD Robotics, Digital Twin, 机器人仿真, URDF编辑器, 模块化组装, 碰撞体优化, 运动学仿真, 机器人可视化, ROS开发工具" />
+    <meta name="author" content="Openlegged" />
+    <link rel="canonical" href="https://urdf.d-robotics.cc/" />
 
     <link rel="icon" type="image/png" href="/logos/logo.png" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://urdf.d-robotics.cc/" />
-    <meta property="og:title" content="URDF Studio - Visual Robot Design Tool" />
-    <meta property="og:description" content="Design, visualize, and inspect robots in your browser. Support for URDF, MJCF, and USD formats with AI-powered assistance." />
-    <meta property="og:image" content="/logos/logo.png" />
+    <meta property="og:title" content="URDF Studio - Professional Robot Design Platform | 机器人可视化设计平台" />
+    <meta property="og:description" content="Professional URDF design and visualization workstation. Supports rapid editing, collision optimization, modular assembly, and AI review. 专业的机器人 URDF 设计与可视化工作站，支持快速编辑、碰撞优化、模块组装及 AI 审阅。" />
+    <meta property="og:image" content="https://urdf.d-robotics.cc/logos/logo.png" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="zh_CN" />
 </head>
   <body>
     <div id="root"></div>
